app/assets/stylesheets/argo/document.css.sass
div.document
  h3.index_title
    margin-left: 1.5em
    text-indent: -1.5em
  div.index-thumb-container
    float: left
    width: 100px
    margin: 4px 2em 4px 0px
  div.document-thumb-container
    float: right
    margin-bottom: 1em
  #document-sections h4
    font-size: 120%
    color: #2A306C

  &.has-thumbnail
    min-height: 124px

dl.deflist
  clear: left !important
  dt
    text-align: left
    width: 7.5em
  dd
    width: 80%

div.column
  float: left
  &.narrow
    width: 45em
    overflow: visible
    dl
      overflow: visible
      dd
        width: 35em
        overflow: visible
  &.wide
    width: 35em
    dd
      width: 25em
  
h1,h2,h3,h4,h5,h6
  &.inline
    display: inline
    width: 2em
  
h3.section-head
  display: block
  clear: both
  width: 100%
  padding: 2px
  color: #2A306C
  background-color: #D4E0E0
  &.collapsible-section
    background-position: left center
    background-repeat: no-repeat
    background-image: url('hierarchy/expanded_lg.png') 
    &.collapsed
      background-image: url('hierarchy/collapsed_lg.png') 
    .section-head-content	
      padding-left: 18px

.section-head-link
  float: right
  padding-right: 6px
  font-weight: normal

.lightbox-head
  color: #868EAC
  
.errortext
  color: red
.notetext
  color: green
.clear
  clear: both

ul.resource-tree
  margin: 0
  li
    padding-left: 8px
    list-style-type: none
    span.label
      color: gray
      &:after
        content: ':'
    ul
      margin: 0

table.detail
  thead
    border-bottom: 1px solid
  th,td
    font-weight: normal
    text-align: left
    padding: 0em 2em .25em 0em 
    border: none

